// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<PostCommentForm
  disabled={false}
  disabledMessage="closed"
  max={100}
  min={3}
  onChange={[Function]}
  onSubmit={[Function]}
  submitStatus={null}
/>
`;

exports[`renders when commenting has been disabled (collapsing) 1`] = `
<PostCommentFormCollapsed
  closedMessage="commenting disabled"
  closedSitewide={true}
/>
`;

exports[`renders when commenting has been disabled (non-collapsing) 1`] = `
<PostCommentForm
  disabled={true}
  disabledMessage="commenting disabled"
  max={100}
  min={3}
  onChange={[Function]}
  onSubmit={[Function]}
  submitStatus={null}
/>
`;

exports[`renders when story has been closed (collapsing) 1`] = `
<PostCommentFormCollapsed
  closedMessage="story closed"
  closedSitewide={false}
/>
`;

exports[`renders when story has been closed (non-collapsing) 1`] = `
<PostCommentForm
  disabled={true}
  disabledMessage="story closed"
  max={100}
  min={3}
  onChange={[Function]}
  onSubmit={[Function]}
  submitStatus={null}
/>
`;

exports[`renders with initialValues 1`] = `
<PostCommentForm
  disabled={false}
  disabledMessage="closed"
  initialValues={
    Object {
      "body": "Hello World!",
    }
  }
  max={100}
  min={3}
  onChange={[Function]}
  onSubmit={[Function]}
  submitStatus={null}
/>
`;
